--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name'viewport' contet="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Sign-up Form</title>
 </head>
 
@@ -15,7 +14,7 @@
 
     <section class="form-details">
 
-    <form action="index.html" method="POST"
+    <form action="index.html" method="POST">
         <h2>Signup for our newsletter</h2>
         <p class="details">Get the latest news on how your code is doing right in your inbox</p>
     
@@ -64,7 +63,7 @@
                 <label for="html_news">HTML News</label>
 
                 <input type="checkbox" id="css_news" name="css_news" value="css_news">
-                <label for="html_css">HTML CSS</label>
+                <label for="css_news">HTML CSS</label>
 
                 <input type="checkbox" id="javascript_news" name="javascript_news" value="javascript_news">
                 <label for="javascript_news">Javascript News</label>
@@ -77,8 +76,8 @@
                 <input type="radio" name="news_format" id="plain_text" value="html">
                 <label for="html">Plain text</label>
 
-                <label for="topics" class="main-label">Other topics you'd like to hear about</label>
-                <textarea class='main-input' name="topic" id="topic" row="4" placeholder="I would like to hear more about..."></textarea>
+                <label for="topic" class="main-label">Other topics you'd like to hear about</label>
+                <textarea class="main-input" name="topic" id="topic" placeholder="I would like to hear more about..."></textarea>
 
         </fieldset>
 
@@ -88,6 +87,6 @@
     </div>
 
     </form>
-
+</section>
 </body>
 </html>
