--- a/index.html
+++ b/index.html
@@ -3,90 +3,152 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="normalize" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Sign-up Form</title>
 </head>
 
 <body>
-    <header>
+    <header class="main-header">
         <h1>THE CODE REVIEW</h1>
     </header>
 
     <section class="form-details">
 
-    <form action="index.html" method="POST">
+    <div class="heading">
         <h2>Signup for our newsletter</h2>
         <p class="details">Get the latest news on how your code is doing right in your inbox</p>
-    
-
-    <div class="form">
-        <fieldset class="contact-information">
-            <legend class="form-header">Contact Information</legend>
-
-            <label class="main-label" for="user_name">Full Name</label>
-            <input required class='main-input' type="text" id="user_name" placeholder="required"><br>
-
-            <label class="main-label" for="email">Email Address</label>
-            <input required class="main-label" type="email" id="email" name="email" placeholder="required"><br>
-
-            <label class="main-label" for="phone">Phone Number</label>
-            <input class='main-input' type="text" id="phone" name="phone" placeholder="1-(234)-567-8910"><br>
-
-            <label class="main-label" for="address">Address</label>
-            <input class='main-input' type="text" id="address" name="address" placeholder="123 Seasame St."><br>
-
-            <label class="main-label" for="city">City</label>
-                    <input class='main-input' type="text" id="city" name="city" placeholder="San Francisco"><br>
-
-            <label for="state" class="main-label">State</label>
-            <select class='main-input' name="state" id="state" >
-                    <option value="CA">CA</option>
-                    <option value="NV">NV</option>
-                    <option value="NY">NY</option>
-                    <option value="CO">CO</option>
-                    <option value="LV">LV</option>
-                    <option value="UT">UT</option>
-            </select><br>
-
-            <label for="zip" class="main-label">Zip Code</label>
-            <input class='main-input' type="text" id="zip" name="zip" placeholder="22335">
-
-        </fieldset>
     </div>
 
-    <div class="form">
+    <form action="index.html" method="POST">
+
+        <fieldset class="contact-information">
+            <legend class="form-header">Contact Information</legend>  
+
+    <div class="flex-wrapper"></div>
+
+        <div class="con">
+            <label class="main-label" for="user_name">Full Name</label>
+            <input required class='main-input' type="text" id="user_name" placeholder="required"><br>
+        </div>
+
+        <div class="con">
+            <label class="main-label" for="email">Email Address</label>
+            <input required class="main-label" type="email" id="email" name="email" placeholder="required"><br>
+        </div>
+
+        <div class="con">
+            <label class="main-label" for="phone">Phone Number</label>
+            <input class='main-input' type="text" id="phone" name="phone" placeholder="1-(234)-567-8910"><br>
+        </div>
+
+        <div class="con">
+            <label class="main-label" for="address">Address</label>
+            <input class='main-input' type="text" id="address" name="address" placeholder="123 Seasame St."><br>
+        </div>
+
+        <div class="con">
+            <label class="main-label" for="city">City</label>
+            <input class='main-input' type="text" id="city" name="city" placeholder="San Francisco"><br>
+        </div>
+
+        <div class="con">
+            <label for="state" class="main-label">State</label>
+            <select class='main-input' name="state" id="state" >
+                <option value="AL">Alabama</option>
+                <option value="AK">Alaska</option>
+                <option value="AZ">Arizona</option>
+                <option value="AR">Arkansas</option>
+                <option value="CA">California</option>
+                <option value="CO">Colorado</option>
+                <option value="CT">Connecticut</option>
+                <option value="DE">Delaware</option>
+                <option value="DC">District Of Columbia</option>
+                <option value="FL">Florida</option>
+                <option value="GA">Georgia</option>
+                <option value="HI">Hawaii</option>
+                <option value="ID">Idaho</option>
+                <option value="IL">Illinois</option>
+                <option value="IN">Indiana</option>
+                <option value="IA">Iowa</option>
+                <option value="KS">Kansas</option>
+                <option value="KY">Kentucky</option>
+                <option value="LA">Louisiana</option>
+                <option value="ME">Maine</option>
+                <option value="MD">Maryland</option>
+                <option value="MA">Massachusetts</option>
+                <option value="MI">Michigan</option>
+                <option value="MN">Minnesota</option>
+                <option value="MS">Mississippi</option>
+                <option value="MO">Missouri</option>
+                <option value="MT">Montana</option>
+                <option value="NE">Nebraska</option>
+                <option value="NV">Nevada</option>
+                <option value="NH">New Hampshire</option>
+                <option value="NJ">New Jersey</option>
+                <option value="NM">New Mexico</option>
+                <option value="NY">New York</option>
+                <option value="NC">North Carolina</option>
+                <option value="ND">North Dakota</option>
+                <option value="OH">Ohio</option>
+                <option value="OK">Oklahoma</option>
+                <option value="OR">Oregon</option>
+                <option value="PA">Pennsylvania</option>
+                <option value="RI">Rhode Island</option>
+                <option value="SC">South Carolina</option>
+                <option value="SD">South Dakota</option>
+                <option value="TN">Tennessee</option>
+                <option value="TX">Texas</option>
+                <option value="UT">Utah</option>
+                <option value="VT">Vermont</option>
+                <option value="VA">Virginia</option>
+                <option value="WA">Washington</option>
+                <option value="WV">West Virginia</option>
+                <option value="WI">Wisconsin</option>
+                <option value="WY">Wyoming</option>
+            </select><br>
+        </div>
+
+        <div class="con">
+            <label for="zip" class="main-label">Zip Code</label>
+            <input class='main-input' type="text" id="zip" name="zip" placeholder="22335">
+        </div>
+    </fieldset>
+
         <fieldset class="newsletter">
             <legend class="form-header">Newsletter</legend>
-                <label class="main-label">Select the newsletter you would like to receive</label>
+                <label class="main-label">Select the newsletter you would like to receive</label><br> 
 
                 <input type="checkbox" id="html_news" name="html_news" value="html_news">
-                <label for="html_news">HTML News</label>
+                <label class="newsl" for="html_news">HTML News</label><br> 
 
                 <input type="checkbox" id="css_news" name="css_news" value="css_news">
-                <label for="css_news">HTML CSS</label>
+                <label class="newsl" for="css_news">HTML CSS</label><br> 
 
                 <input type="checkbox" id="javascript_news" name="javascript_news" value="javascript_news">
-                <label for="javascript_news">Javascript News</label>
+                <label class="newsl" for="javascript_news">Javascript News</label><br> 
             
-                <label class="news-format">Newsletter format</label> 
+                <label class="news-format">Newsletter format</label><br> 
 
                 <input type="radio" name="news_format" id="html" value="html">
-                <label for="html">HTML</label>
+                <label class="newsl" for="html">HTML</label><br> 
 
                 <input type="radio" name="news_format" id="plain_text" value="html">
-                <label for="html">Plain text</label>
+                <label class="newsl" for="html">Plain text</label><br> 
 
-                <label for="topic" class="main-label">Other topics you'd like to hear about</label>
+                <label class="newsl" for="topic">Other topics you'd like to hear about</label><br>
                 <textarea class="main-input" name="topic" id="topic" placeholder="I would like to hear more about..."></textarea>
 
         </fieldset>
 
         <button type="submit">Sign Up</button>
-        <p class="copyright-text">&copy;Copyright The Code Review</p>
-
-    </div>
 
     </form>
 </section>
+
+<footer class="footer">
+    <p class="copyright-text">&copy;Copyright The Code Review</p>
+</footer>
+
 </body>
 </html>
