--- a/index.html
+++ b/index.html
@@ -22,37 +22,36 @@
 
     <form action="index.html" method="POST">
 
-        <fieldset class="information">
-            <legend class="form-header">Contact Information</legend>  
+    <fieldset class="information">
+        <legend class="form-header">Contact Information</legend>  
 
     <div class="flex-wrapper">
-
-        <div class="con">
+        <div class="flex-pair">
             <label class="contact" for="user_name">Full Name</label>
             <input required type="text" id="user_name" name="user_name" placeholder="required"><br>
         </div>
 
-        <div class="con">
+        <div class="flex-pair">
             <label class="contact" for="email">Email Address</label>
             <input required type="email" id="email" name="email" placeholder="required"><br>
         </div>
 
-        <div class="con">
+        <div class="flex-pair">
             <label class="contact" for="phone">Phone Number</label>
             <input type="tel" id="phone" name="phone" placeholder="1-(234)-567-8910"><br>
         </div>
 
-        <div class="con">
+        <div class="flex-pair">
             <label class="contact" for="address">Address</label>
             <input type="text" id="address" name="address" placeholder="123 Seasame St."><br>
         </div>
 
-        <div class="con">
+        <div class="flex-pair">
             <label class="contact" for="city">City</label>
             <input type="text" id="city" name="city" placeholder="San Francisco"><br>
         </div>
 
-        <div class="con">
+        <div class="flex-pair">
             <label for="state" class="contact">State</label>
             <select class="arrows" name="state" id="state">
                 <option value="" selected="selected" disabled hidden>Choose State</option>
@@ -110,7 +109,7 @@
             </select>
         </div>
 
-        <div class="con">
+        <div class="flex-pair">
             <label for="zip-code" class="contact">Zip Code</label>
             <input type="text" id="zip-code" name="zip-code" placeholder="94505">
         </div>
